--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,13 @@
+# rebind prefix to Control + a
+unbind C-b
+unbind C-a
+set -g prefix C-a
+
+# force a reload of the config file
+unbind r
+bind F12 source-file ~/.tmux.conf
+
 # Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
