changed default pane splitting tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,10 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 
+# split pane rebinding
+bind \ split-window -h
+bind - split-window -v
+
 ####### Begin COLORSCHEME: gruvbox
 set -g default-terminal "screen-256color"
 set-option -g status "on"
