--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,78 +7,21 @@ set -g prefix C-a
 unbind r
 bind F12 source-file ~/.tmux.conf
 
-# Smart pane switching with awareness of Vim splits.
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind \\ select-pane -l
 
 # split pane rebinding
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
-####### Begin COLORSCHEME: gruvbox
-set -g default-terminal "screen-256color"
 set-option -g status "off"
-
-# default statusbar colors
-set-option -g status-bg colour237 #bg1
-set-option -g status-fg colour223 #fg1
-
-# default window title colors
-set-window-option -g window-status-bg colour214 #yellow
-set-window-option -g window-status-fg colour237 #bg1
-
-set-window-option -g window-status-activity-bg colour237 #bg1
-set-window-option -g window-status-activity-fg colour248 #fg3
-
-# active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour237 #bg1
-
-# pane border
-set-option -g pane-active-border-fg colour250 #fg2
-set-option -g pane-border-fg colour237 #bg1
-
-# message infos
-set-option -g message-bg colour239 #bg2
-set-option -g message-fg colour223 #fg1
-
-# writting commands inactive
-set-option -g message-command-bg colour239 #fg3
-set-option -g message-command-fg colour223 #bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
-
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-attr "none"
 set-option -g status-justify "left"
-set-option -g status-left-attr "none"
 set-option -g status-left-length "80"
-set-option -g status-right-attr "none"
 set-option -g status-right-length "80"
-set-window-option -g window-status-activity-attr "none"
-set-window-option -g window-status-attr "none"
 set-window-option -g window-status-separator ""
-
-####### End COLORSCHEME: gruvbox
 
 # Custom configuration
 set -sg escape-time 0 
